@@ -580,7 +580,7 @@ class MessageController extends \GO\Base\Controller\AbstractController {
 
 
 						if($contact && !$contact->equals($linkedModels)){						
-							
+
 							$attributes['acl_id']= $contact->findAclId();
 							
 							$linkedEmail = \GO\Savemailas\Model\LinkedEmail::model()->findSingleByAttributes(array(
@@ -594,6 +594,14 @@ class MessageController extends \GO\Base\Controller\AbstractController {
 							}
 
 							$linkedEmail->link($contact);
+							
+							// Also link the company to the email if the contact has a company attached to it.
+							if(!empty(GO::config()->email_autolink_companies) && !empty($contact->company_id)){
+								$company = $contact->company;
+								if($company && !$company->equals($linkedModels)){
+									$linkedEmail->link($contact->company);
+								}
+							}
 						}
 					}
 				}
